Исправлена часть ошибок